k8s-dep/logger-dep.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: loggertest
  name: loggertest
spec:
  selector:
    matchLabels:
      app: loggertest
  template:
    metadata:
      labels:
        app: loggertest
    spec:
      containers:
      - image: 108356037/datalogger:v1slimcustom
        name: datalogger
        resources: 
          limits:
            memory: "256Mi"
            cpu: "500m"
        command: ["/bin/bash"]
        args: ["/usr/src/app/entrypoint.sh"]
