k8s-dep/systhrottle-alerter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: systhrottle-alert
  name: systhrottle-alert
spec:
  selector:
    matchLabels:
      app: systhrottle-alert
  template:
    metadata:
      labels:
        app: systhrottle-alert
    spec:
      containers:
      - image: 108356037/systhrottle:1.0.0
        name: systhrottle
        resources: 
          limits:
            memory: "256Mi"
            cpu: "500m"
      nodeSelector:
        kubernetes.io/role: worker
