k8s-dep/mqtt-infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mqtt-broker
  name: mqtt-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt-broker
  strategy: {}
  template:
    metadata:
      labels:
        app: mqtt-broker
    spec:
      containers:
      - image: eclipse-mosquitto:1.6
        name: eclipse-mosquitto
        resources: 
          limits:
            memory: "1024Mi"
            cpu: "1000m"
      nodeSelector:
        kubernetes.io/arch: amd64
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mqtt-broker
  name: mqtt-broker-svc
spec:
  ports:
  - port: 1883
    protocol: TCP
    targetPort: 1883
  selector:
    app: mqtt-broker
  type: NodePort
