k8s-dep/react-front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: datalogger-react-front
  name: datalogger-react-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datalogger-react-front
  strategy: {}
  template:
    metadata:
      labels:
        app: datalogger-react-front
    spec:
      containers:
      - image: yipei1028/aiit:latest
        name: aiit
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        command: ["/usr/local/bin/yarn"]
        args: ["start"]
      nodeSelector:
        kubernetes.io/arch: amd64
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: datalogger-react-front
  name: datalogger-react-front
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: datalogger-react-front
  type: LoadBalancer
status:
  loadBalancer: {}
